aded cahnges to files

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=J9unhZok1asx0KaYyDvcF3LlfxCQFWn7
 
 DB_HOST=127.0.0.1
 DB_DATABASE=mlmapptest
-DB_USERNAME=samson
-DB_PASSWORD=password
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
